--- a/css/styles.css
+++ b/css/styles.css
@@ -4067,6 +4067,21 @@ textarea.form-control-lg {
   text-decoration: none;
   white-space: nowrap;
 }
+
+@media (min-width: 576px) {
+	
+	.navbar-brand {
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+}
+
+
 .navbar-nav {
   display: flex;
   flex-direction: column;
